actualizacion pagina lugares

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     aqui dejaremos otras opciones para lo que buscas
     <ul>
         <li> <a href="contacto.html">Formulario de contacto </a></li>
-        <li>Lugares</li>
+        <li><a href="lugares.html">Lugares</a></li>
         <li>comidas</li>
         <li> Historia</li>
         <li> Leyendas</li>
