pagina lugares terminado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="selectores" id="contenedor-de-seleccion">
 
             <span class="seleccion" >Tipos de comida</span>
-            <span class="seleccion" > Lugares </span>
+            <span class="seleccion" ><a href="lugares.html">Lugares</a></span>
             <span class="seleccion" > Cultura </span>
 
         </div>
