--- a/lugares.html
+++ b/lugares.html
@@ -15,14 +15,14 @@
             <li class="sub-titulos">Pueblos mágicos </li>
             <ul>
                 <li><a href="batopilas.html">Batopilas, Chihuahua</a></li>
-                <li>Bernal, Queretaro</li>
-                <li>Comala, Colima</li>
-                <li>Cuitzeo, Michoacan</li>
-                <li>jiquilpan, Michoacan</li>
-                <li>Mazamitla, Jalisco</li>
-                <li>Nochistlan, Zacatecas</li>
-                <li>Patzcuaro, Michoacan</li>
-                <li>Taxco, Guerrero</li>
+                <li><a href="bernal.html">Bernal, Queretaro</a></li>
+                <li><a href="comala.html">Comala, Colima</a></li>
+                <li><a href="cuitzeo.html">Cuitzeo, Michoacan</a></li>
+                <li><a href="jiquilpan.html">Jiquilpan, Michoacan</a></li>
+                <li><a href="mazamitla.html">Mazamitla, Jalisco</a></li>
+                <li><a href="nochistlan.html">Nochistlan, Zacatecas</a></li>
+                <li><a href="patzcuaro.html">Patzcuaro, Michoacan</a></li>
+                <li><a href="taxco.html">Taxco, Guerrero</a></li>
             </ul>
         </div>
  
@@ -32,15 +32,15 @@
             
             <li class="sub-titulos">Ciudades</li>
             <ul>
-                <li>CDMX/Ciudad de Mexico</li>
-                <li>Santiago de Queretaro</li>
-                <li>Monterrey</li>
-                <li>Cancun</li>
-                <li>Guadalajara</li>
-                <li>Merida</li>
-                <li>Oaxaca de Juarez</li>
-                <li>Morelia</li>
-                <li>Chihuahua</li>
+                <li><a href="cdmx.html">CDMX/Ciudad de Mexico</a></li>
+                <li><a href="satiagodequeretaro.html">Santiago de Queretaro</a></li>
+                <li><a href="monterrey.html">Monterrey</a></li>
+                <li><a href="cancun.html">Cancun</a></li>
+                <li><a href="guadalajara.html">Guadalajara</a></li>
+                <li><a href="merida.html">Merida</a></li>
+                <li><a href="oaxacadejuarez.html">Oaxaca de Juarez</a></li>
+                <li><a href="morelia.html">Morelia</a></li>
+                <li><a href="chihuahua.html">Chihuahua</a></li>
             </ul>
        
         </div>
