--- a/batopilas.html
+++ b/batopilas.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" type="text/css" href="sub-lugares.css">
     <title>Batopilas,chihuahua</title>
 </head>
 <body>
     <h1>Batopilas Chihuahua</h1>
-    
-    
+    <div >
+    <img src="batopilas1.jpg" class="imagenes">
+    <img src="batopilas2.jpg" class="imagenes">
+    <img src="batopilas3.jpg" class="imagenes">
+    <img src="batopilass4.jpg" class="imagenes">
+    </div>
 </body>
 </html>
