se agregaron hipervinculos a las imagenes

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div>
             <h2> ¿Qué es México? </h2>
             <p> México es un pais asociado en Norte America rico en cultura, comida, pueblos magicos, etc. con una infinidad de historia y se podria decir que "magia"</p>
-             <img src="Mexico.jpg" class="imagen">
+             <a href="cdmx.html"><img src="Mexico.jpg" class="imagen"></a>
         </div>
 
         <div>
             <p> Comó se mencionaba ya anteriormente se encuentra en la parte de Norte America colindando con Estados Unidos en la parte norte y con Guatemala y Belice en la parte sur ya que México es rico en cultura es por su gran historia y desempeño que ha podido tener.</p>
             <p> Ya que Mexico es un pais independiente y tiene que mostrar mucho al mundo seria mejor que le echaramos un vistaso a como se ve en el mapa.</p>
-            <img src="mapa-mexico-2.jpg" class="imagen">
+            <a href="lugares.html"><img src="mapa-mexico-2.jpg" class="imagen"> </a>
 
             <p> como se observa en el mapa mexico tiene 31 estados y un distrito federal anteriormente y actualmente son 32 estados, cada uno de esos estados teniendo pueblos magicos y ciudades.</p>
             <p> Cada uno de los estados que se encuentran en Mexico son regidos por gobernadores y cada uno de los municipios por un presidente municipal asi que todos ellos son regidos por el presidente nacional.</p>
@@ -40,7 +40,7 @@
         <div>
             <h2>¿Que es un pueblo magico?</h2>
             <p> En resumen como tal, es una localidad que tiene atributos simbolics, leyendas, historias hechos tracendentes, cotidianidad, en fin una magia que te emanana en cada una de sus manifestaciones socio-culturales e historia que tienen.</p>
-            <img src="jiquilpan.jpg" class="imagen">
+           <a href="jiquilpan.html">   <img src="jiquilpan.jpg" class="imagen"> </a>
             <p>dentro de los pueblos magicos ya con lo mencionado se muestra lo que es la cultura y lo bello que es Mexico asi demostrando que cada lugra tiene algo nuevo para enriquecer y enseñar sobre su cultura para el mundo.</p>
         </div>
         
@@ -60,8 +60,8 @@
         <li> <a href="contacto.html">Formulario de contacto </a></li>
         <li><a href="lugares.html">Lugares</a></li>
         <li>comidas</li>
-        <li> Historia</li>
-        <li> Leyendas</li>
+        <li>Cultura</li>
+        
     </ul>
 </footer>
 
