pagina terminada con html y css

--- a/comida.html
+++ b/comida.html
@@ -11,7 +11,15 @@
     
     <h1>Un poco de toda la comida </h1>
     <p class="texto">Lo mas tradicional que puedes encontrar en Mexico es la comida, no solo los tacos.</p>
-    
+  
+  
+  <div class="imagen"> 
+    <img src="comida1.jpg" id="comida">
+    <img src="comida2.jpg" id="comida2">
+    <img src="comida3.webp" id="comida">
+    <img src="comida4.jpg"id="comida2">
+  </div>
+
 
 </body>
 </html>
