--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
         <div class="selectores" id="contenedor-de-seleccion">
 
-            <span class="seleccion" >Tipos de comida</span>
+            <span class="seleccion" ><a href="comida.html">Tipos de comida</a></span>
             <span class="seleccion" ><a href="lugares.html">Lugares</a></span>
-            <span class="seleccion" > Cultura </span>
+            <span class="seleccion" ><a href="contacto.html">Formulario</a></span>
 
         </div>
 
@@ -59,8 +59,8 @@
     <ul>
         <li> <a href="contacto.html">Formulario de contacto </a></li>
         <li><a href="lugares.html">Lugares</a></li>
-        <li>comidas</li>
-        <li>Cultura</li>
+        <li><a href="comida.html">Comida</a></li>
+       
         
     </ul>
 </footer>
